# remote-system-resources-monitor

./: Cargo.toml  config.json
src/: configuration.rs  main.rs  main_from_example.txt  monitor.rs
