[package]
name = "monitoring_module"
version = "0.1.0"
authors = ["isidro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
futures = "0.3.4"
tokio = "0.2.11"
sysinfo = "0.11.2"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"